Include portfolio structure

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="col-6 img-container d-flex align-items-end">
           <img
-            src="/images/Vicky5.png"
+            src="/images/Vicky6.PNG"
             class="img-fluid d-none d-sm-block float-end img-vicky"
             alt="Victoria and her Vizsla Chewie"
           />
@@ -119,16 +119,16 @@
           <div class="col-md-4">
             <img
               src="/images/Screenshot_About.png"
-              class="img-fluid rounded-start d-none d-sm-block"
+              class="img-fluid d-none d-sm-block"
               alt="About Page"
             />
           </div>
           <div class="col-md-8">
-            <div class="card-body">
+            <div class="card-body mt-5">
               <h4 class="card-title">About Me</h4>
               <p class="card-text">
                 From art history to IT, with a dash of Italian and a love for
-                health—my journey is anything but typical. Take a peek at what
+                health — my journey is anything but typical. Take a peek at what
                 brought me here!
               </p>
               <a href="/about.html" class="btn primary-link">About Me</a>
@@ -142,12 +142,12 @@
           <div class="col-md-4">
             <img
               src="..."
-              class="img-fluid rounded-start d-none d-sm-block"
-              alt="About Page"
+              class="img-fluid d-none d-sm-block"
+              alt="Project Page"
             />
           </div>
           <div class="col-md-8">
-            <div class="card-body">
+            <div class="card-body mt-5">
               <h4 class="card-title">My Projects</h4>
               <p class="card-text">
                 Want to know more about my projects? Explore my portfolio.
@@ -162,13 +162,13 @@
         <div class="row g-0">
           <div class="col-md-4">
             <img
-              src="..."
-              class="img-fluid rounded-start d-none d-sm-block"
-              alt="About Page"
+              src="/images/Screenshot_Contact.png"
+              class="img-fluid d-none d-sm-block"
+              alt="Contact Page"
             />
           </div>
           <div class="col-md-8">
-            <div class="card-body">
+            <div class="card-body mt-5">
               <h4 class="card-title">Contact Me</h4>
               <p class="card-text">
                 Interested in collaborating or learning more about me and my
