--- a/projects.html
+++ b/projects.html
@@ -88,114 +88,131 @@
       </p>
     </section>
 
-    <div class="container">
-      <div class="row mb-4">
-        <div class="col-6">
-          <img
-            src="images/Basic1.jpg"
-            class="img-fluid"
-            alt="Basic Project 1"
-          />
-        </div>
-        <div class="col-6">
-          <img
-            src="images/Basic2.jpg"
-            class="img-fluid"
-            alt="Basic Project 2"
-          />
+    <div class="container content2-container bg-light">
+      <div class="card container">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="/images/Basic1.jpg"
+              class="img-fluid d-none d-sm-block"
+              alt="Victoria's first SheCodes Project in pastel colours showing her dogs Chewie and Rey"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body mt-4">
+              <h4 class="card-title">My Colorful Start with SheCodes, Rey, and Chewie by My Side</h4>
+              <p class="card-text mt-4 mb-4">
+                My first project was full of pastel colors that feel like home, and it
+              was so special to have Rey and Chewie cheering me on (from their
+              naps). It’s amazing how these colors have become a theme in my work,
+              and it all started here!
+              </p>
+              <a href="https://www.shecodes.io/cohorts/1512/projects/1956092?_gl=1*n0v4pe*_gcl_au*NzI5MDY4NDMwLjE3MjUzMDMyMTY." class="btn primary-link mb-4">Basics Project</a>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="row mb-4">
-        <h3>My Colorful Start with SheCodes, Rey, and Chewie by My Side</h3>
-        <p>
-          My first project was full of pastel colors that feel like home, and it
-          was so special to have Rey and Chewie cheering me on (from their
-          naps). It’s amazing how these colors have become a theme in my work,
-          and it all started here!
-        </p>
-      </div>
-
-      <div class="row mb-4">
-        <div class="col-6">
-          <h3>From Basics to CrossFit</h3>
-          <p>
-            The SheCodes Basic Add-on Course was the perfect push for me to take
+      <div class="card container mt-5">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="/images/CrossFit.jpg"
+              class="img-fluid d-none d-sm-block"
+              alt="Victoria's SheCodes Basics Add-on Project dedicated to CrossFit"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body mt-4">
+              <h4 class="card-title">From Basics to CrossFit</h4>
+              <p class="card-text mt-4 mb-4">
+                The SheCodes Basics Add-on Course was the perfect push for me to take
             coding to the next level! After already having so much fun with the
-            Basic Course, the Add-on allowed me to dive deeper into creating a
+            Basics Course, the Add-on allowed me to dive deeper into creating a
             CrossFit-inspired project dedicated to my passion for sports and the
-            CrossFit community.I aimed to capture the sense of community and
+            CrossFit community. I aimed to capture the sense of community and
             support that I love about CrossFit in a digital form.
-          </p>
+              </p>
+              <a href="https://www.shecodes.io/cohorts/1512/projects/1956092?_gl=1*n0v4pe*_gcl_au*NzI5MDY4NDMwLjE3MjUzMDMyMTY." class="btn primary-link mb-4">Basics Add-on</a>
+            </div>
+          </div>
         </div>
-        <div class="col-6">
-          <img
-            src="images/CrossFit.jpg"
-            class="img-fluid"
-            alt="CrossFit Project"
-          />
+      </div>
+      
+      <div class="card container mt-5">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="/images/WeatherApp.jpg"
+              class="img-fluid d-none d-sm-block"
+              alt="Victoria's first Weather App in pastel colours"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body mt-4">
+              <h4 class="card-title">Crafting My Weather App</h4>
+              <p class="card-text mt-4 mb-4">
+                I’m genuinely proud of what I’ve accomplished with this project!
+            Building my Weather App during the SheCodes Plus workshop has been
+            one of the most rewarding experiences of my coding journey. Watching
+            it come to life with real data felt magical, and the pastel tones
+            made it even more special.
+              </p>
+              <a href="https://pastelmetro-weather.netlify.app/" class="btn primary-link mb-4">Weather App</a>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="row mb-4">
-        <div class="col-6">
-          <img
-            src="images/WorldClock.jpg"
-            class="img-fluid"
-            alt="World Clock Project"
-          />
-        </div>
-        <div class="col-6">
-          <h3>Ticking Around the Globe</h3>
-          <p>
-            The World Clock project was a thrilling exploration of JavaScript
+      <div class="card container mt-5">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="/images/WorldClock.jpg"
+              class="img-fluid d-none d-sm-block"
+              alt="Victoria's first World Clock project"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body mt-4">
+              <h4 class="card-title">Ticking Around the Globe</h4>
+              <p class="card-text mt-4 mb-4">
+                The World Clock project was a thrilling exploration of JavaScript
             Date Formats and Time Zones! As we dove into the course, I was
             captivated by how we can manipulate time in so many ways.
             Understanding the intricacies of time zones opened up a whole new
             world for me, enabling me to create a functional clock that connects
             different parts of the globe.
-          </p>
+              </p>
+              <a href="https://myveryfirstworldclock.netlify.app/" class="btn primary-link mb-4">World Clock</a>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="row mb-4">
-        <div class="col-6">
-          <h3>Crafting My Weather App</h3>
-          <p>
-            I’m genuinely proud of what I’ve accomplished with this project!
-            Building my Weather App during the SheCodes Plus workshop has been
-            one of the most rewarding experiences of my coding journey. Watching
-            it come to life with real data felt magical, and the pastel tones
-            made it even more special.
-          </p>
-        </div>
-        <div class="col-6">
-          <img
-            src="images/WeatherApp.jpg"
-            class="img-fluid"
-            alt="Weather App Project"
-          />
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-6">
-          <img
-            src="images/AiMealplanner.jpg"
-            class="img-fluid"
-            alt="AI Meal Planner Project"
-          />
-        </div>
-        <div class="col-6">
-          <h3>AI on My Plate</h3>
-          <p>
-            After taking a break from coding due to work commitments, I felt a
+      <div class="card container mt-5">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img
+              src="/images/AiMealplanner.jpg"
+              class="img-fluid d-none d-sm-block"
+              alt="Victoria's Ai-powered Meal Planner"
+            />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body mt-4">
+              <h4 class="card-title">AI on My Plate</h4>
+              <p class="card-text mt-4 mb-4">
+                After taking a break from coding due to work commitments, I felt a
             bit apprehensive about diving back in. But luckily, I quickly found
             my footing again! With AI being such a hot topic these days, it was
             exciting to explore its potential and create something impactful. As
             someone who is passionate about CrossFit, proper nutrition is key to
             my journey. This need inspired my project!
-          </p>
+              </p>
+              <a href="https://aipoweredmealplanner.netlify.app/" class="btn primary-link mb-4">Meal Planner</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
