--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,6 @@
       name="description"
       content="Learn more about me and my journey in web development, including my experience with Whecodes workshops and my passion for creating innovative solutions."
     />
-    <title>
-      Product Owner and Frontend Developer Victoria Louise Steinwachs
-    </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,7 +28,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Contact Victoria</title>
   </head>
-  <body>
+  <body class="contact-page">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container bg-light">
         <a class="navbar-brand" href="/index.html"
@@ -92,7 +89,7 @@
     <div class="content-container container start-section">
       <div class="row">
         <div class="col-12 col-md-6 content">
-          <h1 class="mt-5 h1-shadow-contact">Contact Me</h1>
+          <h1 class="mt-5">Contact Me</h1>
           <h2>Let's get in touch!</h2>
           <p class="mt-5">
             Whether you're here for a chat, a collaboration, or just to say hi,
@@ -100,6 +97,48 @@
             you best — email, LinkedIn, or even a carrier pigeon 🕊️ if you can
             find one. Just like in Rome, there’s always a way to connect.
           </p>
+          <div class="social-links d-flex justify-content-evenly mt-5 mb-4">
+            <div>
+              <h4>Email &#8594;</h4>
+              <a
+                href="mailto:victoria.steinwachs@protonmail.com"
+                target="_blank"
+                title="LinkedIn Profile"
+              >
+                <i class="fa-solid fa-at"></i>
+              </a>
+            </div>
+            <div>
+              <h4>LinkedIn &#8594;</h4>
+              <a
+                href="https://www.linkedin.com/in/victoria-louise-steinwachs"
+                target="_blank"
+                title="LinkedIn Profile"
+              >
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </div>
+            <div>
+              <h4>Instagram &#8594;</h4>
+              <a
+                href="https://www.instagram.com/fit.paws.and.sea.views/"
+                target="_blank"
+                title="Instagram Profile"
+              >
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </div>
+            <div>
+              <h4>Github &#8594;</h4>
+              <a
+                href="https://github.com/vilouspics"
+                target="_blank"
+                title="Github Profile"
+              >
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </div>
+          </div>
         </div>
         <div class="col-6 container d-flex align-items-end">
           <img
@@ -109,6 +148,7 @@
           />
         </div>
       </div>
+
       <div class="wavy-line bg-light mt-5"></div>
     </div>
 
@@ -116,36 +156,6 @@
       <div
         class="content-container container footer-container d-flex flex-column align-items-center"
       >
-        <div class="social-links d-flex justify-content-evenly mb-4">
-          <a
-            href="mailto:victoria.steinwachs@protonmail.com"
-            target="_blank"
-            title="LinkedIn Profile"
-          >
-            <i class="fa-solid fa-at"></i>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/victoria-louise-steinwachs"
-            target="_blank"
-            title="LinkedIn Profile"
-          >
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-          <a
-            href="https://www.instagram.com/fit.paws.and.sea.views/"
-            target="_blank"
-            title="Instagram Profile"
-          >
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a
-            href="https://github.com/vilouspics"
-            target="_blank"
-            title="Github Profile"
-          >
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </div>
         <p class="text-center mb-5">
           This project was coded by Victoria Louise Steinwachs and is
           <a
@@ -157,7 +167,6 @@
       </div>
     </footer>
 
-    <
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
