--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
             furry friends, and a love for holistic health and design. My journey
             has taken me from the world of art history, architecture, Italian
             and (IT-) consulting to exploring the deeper connection between web
-            design, wellness, and nutrition. After 10 years in Berlin, I moved
-            to the tranquil coast of Schleswig-Holstein with my partner and our
-            two Vizslas, Chewie and Rey (yes, you're right — someone here
+            design, wellness, and nutrition. After more than 10 years in Berlin
+            and abroad, I moved to the tranquil coast of Schleswig-Holstein with
+            my partner and our two Vizslas, Chewie and Rey (yes, you're right —
+            someone here
             <em>might</em> be a bit of a Star Wars fan). Through health
             challenges and career transitions, I’ve found a passion for mindful
             living, CrossFit, coding and studying vegan nutrition. Let’s explore
@@ -131,7 +132,9 @@
                 health — my journey is anything but typical. Take a peek at what
                 brought me here!
               </p>
-              <a href="/about.html" class="btn primary-link">About Me</a>
+              <a href="/about.html" class="btn primary-link" target="_blank"
+                >About Me</a
+              >
             </div>
           </div>
         </div>
@@ -141,7 +144,7 @@
         <div class="row g-0">
           <div class="col-md-4">
             <img
-              src="..."
+              src="/images/Screenshot_Projects.png"
               class="img-fluid d-none d-sm-block"
               alt="Project Page"
             />
@@ -152,7 +155,9 @@
               <p class="card-text">
                 Want to know more about my projects? Explore my portfolio.
               </p>
-              <a href="/projects.html" class="btn primary-link">My Projects</a>
+              <a href="/projects.html" class="btn primary-link" target="_blank"
+                >My Projects</a
+              >
             </div>
           </div>
         </div>
@@ -174,7 +179,9 @@
                 Interested in collaborating or learning more about me and my
                 work? Let's connect!
               </p>
-              <a href="/contact.html" class="btn primary-link">Contact Me</a>
+              <a href="/contact.html" class="btn primary-link" target="_blank"
+                >Contact Me</a
+              >
             </div>
           </div>
         </div>
