--- a/projects.html
+++ b/projects.html
@@ -52,8 +52,7 @@
                 class="nav-link navigation-links"
                 href="/about.html"
                 title="About Victoria Louise Steinwachs"
-                >ABOUT ME</a
-              >
+                >ABOUT ME</a>
             </li>
             <li class="nav-item">
               <a
@@ -61,16 +60,14 @@
                 href="/projects.html"
                 aria-current="page"
                 title="Victoria's Projects"
-                >MY PROJECTS</a
-              >
+                >MY PROJECTS</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link navigation-links"
                 href="/contact.html"
                 title="Contact Victoria Louise Steinwachs"
-                >CONTACT ME</a
-              >
+                >CONTACT ME</a>
             </li>
           </ul>
         </div>
@@ -107,7 +104,7 @@
               naps). It’s amazing how these colors have become a theme in my work,
               and it all started here!
               </p>
-              <a href="https://www.shecodes.io/cohorts/1512/projects/1956092?_gl=1*n0v4pe*_gcl_au*NzI5MDY4NDMwLjE3MjUzMDMyMTY." class="btn primary-link mb-4">Basics Project</a>
+              <a href="https://www.shecodes.io/cohorts/1512/projects/1956092?_gl=1*n0v4pe*_gcl_au*NzI5MDY4NDMwLjE3MjUzMDMyMTY." class="btn primary-link mb-4" target="_blank">Basics Project</a>
             </div>
           </div>
         </div>
@@ -133,7 +130,7 @@
             CrossFit community. I aimed to capture the sense of community and
             support that I love about CrossFit in a digital form.
               </p>
-              <a href="https://www.shecodes.io/cohorts/1512/projects/1956092?_gl=1*n0v4pe*_gcl_au*NzI5MDY4NDMwLjE3MjUzMDMyMTY." class="btn primary-link mb-4">Basics Add-on</a>
+              <a href="https://www.shecodes.io/cohorts/1512/projects/1956092?_gl=1*n0v4pe*_gcl_au*NzI5MDY4NDMwLjE3MjUzMDMyMTY." class="btn primary-link mb-4" target="_blank">Basics Add-on</a>
             </div>
           </div>
         </div>
@@ -158,7 +155,7 @@
             it come to life with real data felt magical, and the pastel tones
             made it even more special.
               </p>
-              <a href="https://pastelmetro-weather.netlify.app/" class="btn primary-link mb-4">Weather App</a>
+              <a href="https://pastelmetro-weather.netlify.app/" class="btn primary-link mb-4" target="_blank">Weather App</a>
             </div>
           </div>
         </div>
@@ -184,7 +181,7 @@
             world for me, enabling me to create a functional clock that connects
             different parts of the globe.
               </p>
-              <a href="https://myveryfirstworldclock.netlify.app/" class="btn primary-link mb-4">World Clock</a>
+              <a href="https://myveryfirstworldclock.netlify.app/" class="btn primary-link mb-4" target="_blank">World Clock</a>
             </div>
           </div>
         </div>
@@ -210,7 +207,7 @@
             someone who is passionate about CrossFit, proper nutrition is key to
             my journey. This need inspired my project!
               </p>
-              <a href="https://aipoweredmealplanner.netlify.app/" class="btn primary-link mb-4">Meal Planner</a>
+              <a href="https://aipoweredmealplanner.netlify.app/" class="btn primary-link mb-4" target="_blank">Meal Planner</a>
             </div>
           </div>
         </div>
